// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AutoGrid > 使用渲染函数给组件传入各个类型的子节点 1`] = `
"<div style=\\"display: grid; grid-template-columns: repeat(0, 1fr); column-gap: 0px; row-gap: 0px;\\">
  <div style=\\"overflow: hidden;\\">123</div>
  <div style=\\"overflow: hidden;\\">&lt;!-- comment --&gt;</div>
  <div style=\\"overflow: hidden;\\">
    <div>456</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div style=\\"display: grid; grid-template-columns: repeat(0, 1fr); column-gap: 0px; row-gap: 0px;\\"></div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-1</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-2</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-3</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-4</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-5</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-6</div>
  </div>
  <div style=\\"overflow: hidden;\\">789</div>
  <div style=\\"overflow: hidden;\\">1</div>
  <div style=\\"overflow: hidden;\\">2</div>
</div>"
`;

exports[`AutoGrid > 同时设置横纵间距和"横向间距/纵向间距"时, 以"横向间距/纵向间距"为准 1`] = `
"<div style=\\"display: grid; grid-template-columns: repeat(1, 1fr); column-gap: 2px; row-gap: 2px;\\">
  <div style=\\"overflow: hidden;\\">
    <div>item-1</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-2</div>
  </div>
</div>"
`;

exports[`AutoGrid > 同时设置横纵间距和横向间距时, 以横向间距为准 1`] = `
"<div style=\\"display: grid; grid-template-columns: repeat(1, 1fr); column-gap: 2px; row-gap: 6px;\\">
  <div style=\\"overflow: hidden;\\">
    <div>item-1</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-2</div>
  </div>
</div>"
`;

exports[`AutoGrid > 同时设置横纵间距和纵向间距时, 以纵向间距为准 1`] = `
"<div style=\\"display: grid; grid-template-columns: repeat(1, 1fr); column-gap: 6px; row-gap: 2px;\\">
  <div style=\\"overflow: hidden;\\">
    <div>item-1</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-2</div>
  </div>
</div>"
`;

exports[`AutoGrid > 未给组件传入子节点 1`] = `"<div style=\\"display: grid; grid-template-columns: repeat(0, 1fr); column-gap: 0px; row-gap: 0px;\\"></div>"`;

exports[`AutoGrid > 给组件传入各个类型的子节点 1`] = `
"<div style=\\"display: grid; grid-template-columns: repeat(0, 1fr); column-gap: 0px; row-gap: 0px;\\">
  <div style=\\"overflow: hidden;\\"> 123 </div>
  <div style=\\"overflow: hidden;\\">
    <div>456</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div style=\\"display: grid; grid-template-columns: repeat(0, 1fr); column-gap: 0px; row-gap: 0px;\\"></div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-1</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-2</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-3</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-4</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-5</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-6</div>
  </div>
</div>"
`;

exports[`AutoGrid > 设置横向间距 1`] = `
"<div style=\\"display: grid; grid-template-columns: repeat(1, 1fr); column-gap: 2px; row-gap: 0px;\\">
  <div style=\\"overflow: hidden;\\">
    <div>item-1</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-2</div>
  </div>
</div>"
`;

exports[`AutoGrid > 设置横纵间距 1`] = `
"<div style=\\"display: grid; grid-template-columns: repeat(1, 1fr); column-gap: 2px; row-gap: 2px;\\">
  <div style=\\"overflow: hidden;\\">
    <div>item-1</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-2</div>
  </div>
</div>"
`;

exports[`AutoGrid > 设置纵向间距 1`] = `
"<div style=\\"display: grid; grid-template-columns: repeat(0, 1fr); column-gap: 0px; row-gap: 2px;\\">
  <div style=\\"overflow: hidden;\\">
    <div>item-1</div>
  </div>
  <div style=\\"overflow: hidden;\\">
    <div>item-2</div>
  </div>
</div>"
`;
